# liam-search

./: README.md
backend/: .env.example  .gitignore  .prettierignore  .prettierrc  README.md  config.toml  package.json  subtitleScraper.ts  tsconfig.json  videos.json
backend/src/: api.ts  config.ts  db.ts  jobs.ts  log.ts  main.ts  search.ts  status.ts  types.ts  utils.ts
backend/src/api/: index.ts  jobs.ts  search.ts  stats.ts  status.ts
backend/src/jobs/: buildIndex.ts  checkCookies.ts  checkForCookies.ts  downloadYtDlp.ts  index.ts  processVideos.ts  registerInterval.ts  startServer.ts  transcribe.ts  updateVideosCache.ts
backend/src/transcriber/: README.md  main.py  pyproject.toml
backend/temp/: fivehearts3_short.opus
frontend/: README.md  index.html  tsconfig.app.json  tsconfig.node.json
frontend/public/: Buggin.avif  LiamConga.avif  liamkSlam.avif  poroAgony.avif
frontend/src/: App.svelte  app.css
frontend/src/lib/components/: Result.svelte
shared/: package.json  tsconfig.json  types.ts
